# auto-dev-rs

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QUICKSTART.md  README.md  TODO.md  codebase-review-report.md  rustfmt.toml
.auto-dev/: config.toml  config.toml.example  self.toml
.github/: copilot-instructions.md
PRPs/: 000-project-bootstrap.md  001-cli-foundation.md  002-error-handling.md  003-configuration-system.md  004-task-tracking-system.md  005-system-prompts-management.md  006-plugin-traits.md  007-plugin-discovery.md  008-project-detection.md  009-template-engine.md  010-code-generation-rust.md  011-default-templates.md  012-integration-tests.md  100-filesystem-monitoring.md  101-spec-parsing-understanding.md  102-llm-integration.md  103-code-synthesis-engine.md  104-context-management.md  105-incremental-implementation.md  106-test-generation.md  107-verification-validation.md  108-continuous-monitoring-loop.md  110-llm-optimization-routing.md  201-recursive-monitoring.md  203-dogfood-configuration.md  205-dynamic-module-system.md  206-hot-reload-infrastructure.md  207-module-sandboxing.md  208-self-test-framework.md  209-bootstrap-sequence.md  (+50 more)
auto-dev/: Cargo.toml
auto-dev-core/: Cargo.toml  models.toml
auto-dev-core/benches/: hot_reload_performance.rs  module_messages.rs
auto-dev-core/examples/: debug_claude.rs  debug_fabric.rs  example_module.rs  fabric_models.rs  fabric_test.rs  model_validation.rs  qwen_model_test.rs  test_cli_tools.rs  tiny_model_demo.rs
auto-dev-core/src/: lib.rs  self_target.rs
auto-dev-core/src/bootstrap/: initializer.rs  mod.rs  preflight.rs  sequence.rs  snapshot.rs  validator.rs
auto-dev-core/src/claude/: claude_md.rs  command_executor.rs  command_parser.rs  command_registry.rs  command_types.rs  config_merger.rs  config_priority.rs  config_watcher.rs  context_integration.rs  discovery.rs  mod.rs
auto-dev-core/src/context/: embeddings.rs  manager.rs  mod.rs  query.rs  storage.rs  tests.rs
auto-dev-core/src/context/analyzer/: conventions.rs  dependencies.rs  mod.rs  patterns.rs  structure.rs
auto-dev-core/src/dev_loop/: control_server.rs  decision_engine.rs  event_processor.rs  health_monitor.rs  llm_optimizer.rs  mod.rs  orchestrator.rs  scheduler.rs
auto-dev-core/src/docs/: changelog.rs  examples.rs  extractor.rs  formatter.rs  generator.rs  mod.rs
auto-dev-core/src/incremental/: executor.rs  mod.rs  planner.rs  progress.rs  rollback.rs  validator.rs
auto-dev-core/src/instructions/: extractor.rs  formats.rs  mod.rs  parser.rs
auto-dev-core/src/learning/: decision_improver.rs  embeddings.rs  failure_analyzer.rs  integration_tests.rs  knowledge_base.rs  learner.rs  mod.rs  pattern_extractor.rs  success_tracker.rs
auto-dev-core/src/llm/: candle.rs  classifier.rs  claude.rs  cli_tools.rs  config.rs  context_manager.rs  errors.rs  mock.rs  mod.rs  ollama.rs  ollama_models.rs  openai.rs  openai_async.rs  openai_compat.rs  openrouter.rs  prompts.rs  provider.rs  roles.rs  router.rs  tiny.rs  token_manager.rs  traits.rs  types.rs
auto-dev-core/src/llm/claude_code/: detector.rs  mod.rs
auto-dev-core/src/llm/router/: classifier.rs  cost_tracker.rs  models.rs  optimizer.rs  performance.rs  registry.rs
auto-dev-core/src/mcp/: client.rs  discovery.rs  mod.rs  tools.rs  transport.rs
auto-dev-core/src/metrics/: analyzer.rs  collector.rs  dashboard.rs  exporter.rs  mod.rs  storage.rs
auto-dev-core/src/modules/: interface.rs  loader.rs  messages.rs  mod.rs  native_host.rs  registry.rs  runtime.rs  tests.rs  wasm_host.rs
auto-dev-core/src/modules/hot_reload/: coordinator.rs  migration.rs  mod.rs  scheduler.rs  state_manager.rs  tests.rs  traffic_controller.rs  verifier.rs
auto-dev-core/src/modules/sandbox/: audit.rs  capabilities.rs  mod.rs  resource_limits.rs  test.rs  violations.rs
auto-dev-core/src/modules/store/: discovery.rs  installer.rs  manifest.rs  mod.rs  storage.rs  tests.rs
auto-dev-core/src/monitor/: analyzer.rs  classifier.rs  debouncer.rs  mod.rs  queue.rs  watcher.rs
auto-dev-core/src/parser/: extractor.rs  gherkin.rs  markdown.rs  mod.rs  model.rs  openapi.rs  schema.rs  todo_extractor.rs
auto-dev-core/src/safety/: analyzer.rs  contracts.rs  gates.rs  invariants.rs  mod.rs  validators.rs
auto-dev-core/src/self_dev/: control.rs  coordinator.rs  mod.rs  monitor.rs  orchestrator.rs  state_machine.rs
auto-dev-core/src/self_monitor/: audit_trail.rs  loop_detector.rs  mod.rs  modification_guard.rs  self_monitor.rs
auto-dev-core/src/self_test/: compatibility.rs  mod.rs  performance.rs  regression.rs  safety.rs  sandbox_env.rs  test_runner.rs
auto-dev-core/src/self_upgrade/: mod.rs  rollback.rs  state_preserver.rs  upgrader.rs  verifier.rs
auto-dev-core/src/self_upgrade/platform/: mod.rs  unix.rs  windows.rs
auto-dev-core/src/synthesis/: coverage.rs  engine.rs  mod.rs  state.rs
auto-dev-core/src/synthesis/pipeline/: analyzer.rs  generator.rs  merger.rs  mod.rs  planner.rs  validator.rs
auto-dev-core/src/test_gen/: coverage.rs  generator.rs  mod.rs
auto-dev-core/src/test_gen/frameworks/: javascript.rs  mod.rs  python.rs  rust.rs
auto-dev-core/src/test_gen/strategies/: edge_case.rs  integration.rs  mod.rs  property.rs  unit.rs
auto-dev-core/src/validation/: README.md  contracts.rs  mod.rs  tools.rs  validator.rs  verifier.rs
auto-dev-core/src/validation/performance/: mod.rs
auto-dev-core/src/validation/quality/: mod.rs
auto-dev-core/src/validation/security/: mod.rs
auto-dev-core/src/vcs/: bisect.rs  branch_manager.rs  commit_builder.rs  conflict_resolver.rs  git_ops.rs  history.rs  mod.rs  pr_creator.rs
auto-dev/src/: main.rs
auto-dev/src/cli/: app.rs  claude_commands.rs  mod.rs
auto-dev/src/cli/commands/: analyze.rs  bootstrap.rs  deploy.rs  docs.rs  dogfood.rs  generate.rs  loop_control.rs  manage.rs  metrics.rs  mod.rs  parse.rs  self_dev.rs  test.rs  validate.rs
auto-dev/src/cli/commands/generate/: mod.rs
auto-dev/src/cli/commands/generate/init/: detector.rs  executor.rs  instructions.rs  mod.rs
(+24 files in other folders)
