[workspace]
members = ["auto-dev", "auto-dev-core", "regex-utils"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
edition = "2024"
authors = ["Auto Dev Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/destenson/auto-dev-rs.git"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "string"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
regex-utils = { path = "regex-utils" }
tracing = "0.1.41"
