[package]
name = "auto-dev-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "auto_dev_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
notify = "8.2.0"
ignore = "0.4.23"
dashmap = "6.1.0"
tokio = { workspace = true, features = ["fs", "sync"] }
pulldown-cmark = "0.13.0"
serde_yaml = "0.9.33"
serde_json = "1.0.145"
openapiv3 = "2.2.0"
gherkin = "0.14.0"
regex = "1.11.2"

[dev-dependencies]
tempfile = "3.22.0"
