[package]
name = "auto-dev-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "auto_dev_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
notify = "8.2.0"
ignore = "0.4.23"
dashmap = "6.1.0"
tokio = { workspace = true, features = ["fs", "sync"] }
pulldown-cmark = "0.13.0"
serde_yaml = "0.9.33"
serde_json = "1.0.145"
openapiv3 = "2.2.0"
gherkin = "0.14.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
async-trait = "0.1.89"
candle-core = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = "0.22.0"
tiktoken-rs = "0.7.0"
toml = "0.9.5"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
syn = "2.0.106"
quote = "1.0.40"
tree-sitter = "0.25.9"
similar = "2.7.0"
ropey = "1.6.1"
walkdir = "2.5.0"
petgraph = "0.8.2"
rayon = "1.11.0"
log = "0.4.28"
git2 = "0.20.2"
indicatif = "0.18.0"
quickcheck = "1.0.3"
proptest = "1.7.0"
priority-queue = "2.5.0"
metrics = "0.24.2"
cargo_metadata = "0.22.0"
hnsw = "0.11.0"
statrs = "0.18.0"
wasmtime = "36.0.2"
libloading = "0.8"
bincode = "2.0.1"
futures = "0.3"


[dev-dependencies]
tempfile = "3.22.0"
tracing-subscriber = "0.3"
