[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "auto-dev-core"
version.workspace = true

[features]
# default = []
default = ["tracing"]
# default = ["log", "tracing", "tracing-subscriber"]
log = ["dep:log"]
tracing = ["dep:tracing"]
tracing-subscriber = ["dep:tracing-subscriber"]

[lib]
name = "auto_dev_core"
path = "src/lib.rs"

[dependencies]
anyhow = {workspace = true}
async-trait = "0.1.89"
bincode = "2.0.1"
candle-core = "0.9.1"
candle-transformers = "0.9.1"
cargo_metadata = "0.22.0"
chrono = {version = "0.4.42", features = ["serde"]}
dashmap = "6.1.0"
dirs = "6.0.0"
futures = "0.3"
gherkin = "0.14.0"
git2 = "0.20.2"
hnsw = "0.11.0"
ignore = "0.4.23"
indicatif = "0.18.0"
libloading = "0.8"
log = { version = "0.4.28", optional = true }
md5 = "0.8.0"
metrics = "0.24.2"
notify = "8.2.0"
openapiv3 = "2.2.0"
petgraph = "0.8.2"
priority-queue = "2.5.0"
proptest = "1.7.0"
pulldown-cmark = "0.13.0"
quickcheck = "1.0.3"
quote = "1.0.40"
rayon = "1.11.0"
regex = "1.11.2"
reqwest = {version = "0.12.23", features = ["json"]}
ropey = "1.6.1"
serde = {workspace = true}
serde_json = "1.0.145"
serde_yaml = "0.9.33"
sha2 = "0.10.9"
similar = "2.7.0"
statrs = "0.18.0"
syn = { version = "2.0.106", features = ["full", "parsing", "printing", "visit"] }
tempfile = "3.22.0"
thiserror = {workspace = true}
tiktoken-rs = "0.7.0"
tokenizers = "0.22.0"
tokio = {workspace = true, features = ["fs", "sync"]}
toml = "0.9.5"
tracing = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tree-sitter = "0.25.9"
uuid = {version = "1.18.1", features = ["serde", "v4"]}
walkdir = "2.5.0"
wasmtime = "37.0.1"

[dev-dependencies]
criterion = {version = "0.7.0", features = ["async_tokio"]}
tempfile = "3.22.0"
tracing-subscriber = "0.3"

[[bench]]
harness = false
name = "module_messages"

[[bench]]
harness = false
name = "hot_reload_performance"
