[package]
name = "auto-dev"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "auto-dev"
path = "src/main.rs"

[dependencies]
auto-dev-core = { path = "../auto-dev-core" }
chrono = "0.4.42"
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json = "1.0.145"
toml = "0.9.5"
once_cell = "1.21.3"
